# fastmatmuls

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  conanfile.py
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  matrix_benchmark.cpp
include/: matrix.hpp
test/: CMakeLists.txt  matrix_tests.cpp
